Lighten gray background for contrast, correct iconSrc for pwa

--- a/app/assets/sass/_utilities.sass
+++ b/app/assets/sass/_utilities.sass
@@ -2,7 +2,7 @@
 
 // Set your brand colors
 $teal: #48a2a2
-$grey-background: lighten($grey-lighter, 10%)
+$grey-background: lighten($grey-lighter, 13%)
 
 // Update Bulma's global variables
 // $family-sans-serif: "Monda", sans-serif
